# albums_anniversaries

./: README.md  pyproject.toml  setup.py
src/: .favourite_albums.txt  main.py  processor.py  recallbum.py  reminder.py  web_parser.py  writer.py
src/recallbum/: fetcher.py  processor.py  recallbum.py  reminder.py  web_parser.py  writer.py
